chnaged the folder structure
