# src/models/requests/UserRequests.ts
@@ -1,0 +1,12 @@
+export interface UserLoginRequest {
+    username: string;
+    password: string;
+
+}
+
+export interface UserRegisterRequest {
+    email: string;
+    username: string;
+    password: string;
+}
+
