# src/models/user/IUser.ts
@@ -1,0 +1,5 @@
+export interface IUser {
+    email: string;
+    username: string;
+    password: string;
+}
