# src/models/user/UserDto.ts
@@ -1,0 +1,4 @@
+export interface UserDto {
+    email: string;
+    username: string;
+}
