# src/routes/routes.ts
@@ -58,21 +58,20 @@ const models: TsoaRoute.Models = {
         "additionalProperties": true,
     },
     // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
-    "IUser": {
+    "UserDto": {
         "dataType": "refObject",
         "properties": {
             "email": {"dataType":"string","required":true},
             "username": {"dataType":"string","required":true},
-            "password": {"dataType":"string","required":true},
         },
         "additionalProperties": true,
     },
     // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
-    "ApiSuccessResponse_IUser_": {
+    "ApiSuccessResponse_UserDto_": {
         "dataType": "refObject",
         "properties": {
             "success": {"dataType":"enum","enums":[true],"required":true},
-            "data": {"ref":"IUser"},
+            "data": {"ref":"UserDto"},
         },
         "additionalProperties": true,
     },
